calculate the average length of tweets

--- a/1_preprocessing/FilterMethods.ipynb
+++ b/1_preprocessing/FilterMethods.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def by_tweets_number(mydict):\n",
-    "    ''' Remove the key of user from the dictionary if his/her tweets number is zero. '''\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def filter_user_by_tweet_number(mydict):\n",
+    "    ''' 過濾使用者中推文數量低於門檻值的人 '''\n",
     "    total_list = list(mydict.keys())\n",
     "    remove_list = []\n",
     "    for key in total_list:\n",
@@ -21,6 +32,40 @@
     "            pass\n",
     "    print('Remove users:{0}'.format(remove_list))\n",
     "    return mydict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_tweet_by_re(txt, how='empty'):\n",
+    "    ''' 過濾推文中的網址、被提及的人名 '''\n",
+    "\n",
+    "    if how == 'empty':\n",
+    "        replace_link = ''\n",
+    "        replace_mention = ''\n",
+    "    elif how == 'symbol':\n",
+    "        replace_link == 'LINK' \n",
+    "        replace_mention = 'MENTION'\n",
+    "    else:\n",
+    "        print('Error HOW')\n",
+    "        pass\n",
+    "    try:\n",
+    "        # url\n",
+    "        txt = re.sub(r\"http\\S+\", replace_link, txt)\n",
+    "        txt = re.sub(r\"https\\S+\", replace_link, txt)\n",
+    "        txt = re.sub(r\"twitter.com/\\S+\", replace_link, txt)\n",
+    "        txt = re.sub(r\"pic.twitter.com\\S+\", replace_link, txt)\n",
+    "        txt = re.sub(r\"\\S+/\\S+\", replace_link, txt)\n",
+    "        #txt = re.sub(r\"\\S+\\/status\\S+\", txt)\n",
+    "        # mention\n",
+    "        txt = re.sub(r\"@\\S+\", replace_mention, txt)\n",
+    "    except TypeError as e:\n",
+    "        print(e)\n",
+    "    \n",
+    "    return txt"
    ]
   },
   {
