--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -2,33 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import re\n",
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import ipynb.fs.defs.PeopleInfo as peopleInfo\n",
     "from nltk.corpus import stopwords\n",
     "from nltk import TweetTokenizer\n",
-    "# from nltk.stem.porter import PorterStemmer\n",
-    "# 引用 tweetTextHandler.ipynb\n",
-    "import ipynb.fs.defs.TweetTextHandler as tweetTextHandler\n",
+    "# import ipynb.fs.defs.TweetTextHandler as tweetTextHandler\n",
     "import ipynb.fs.defs.FilterMethods as filterMethods\n",
     "import sys, os\n",
     "sys.path.append('../2_feature')\n",
     "import ipynb.fs.defs.GetFeatures as getFeatures\n",
     "global stop_words\n",
-    "stop_words = stopwords.words('english')"
+    "stop_words = stopwords.words('english')\n",
+    "import plotly\n",
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "from IPython.display import display, Image\n",
+    "plotly.tools.set_credentials_file(username='Adeline', api_key='Z5eltNtBQXqvI05ZFQtz')\n",
+    "# import plotly.offline as offline\n",
+    "# offline.init_notebook_mode(connected=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -39,14 +43,16 @@
     "    wordDict = dict()\n",
     "    stopwordDict = dict()\n",
     "    stopwordTweetCount = 0\n",
+    "    tweet_length = 0\n",
     "    tknzr = TweetTokenizer()\n",
-    "\n",
+    "    aaa = texts\n",
+    "    length = len(texts)\n",
     "    for txt in texts:\n",
     "        stopwordFlag = False\n",
     "        try:\n",
-    "            txt = tweetTextHandler.del_url(txt)\n",
+    "            txt = filterMethods.filter_tweet_by_re(txt)\n",
+    "            tweet_length += len(txt)\n",
     "            for token in tknzr.tokenize(txt):\n",
-    "                #token = porter.stem(token.lower())\n",
     "                if token.isdigit():\n",
     "                    pass\n",
     "                elif token in stop_words:\n",
@@ -57,9 +63,15 @@
     "            if stopwordFlag:\n",
     "                stopwordTweetCount += 1\n",
     "        except Exception as e:\n",
-    "            #print(\"Error message:\", e)\n",
-    "            pass\n",
-    "    return wordDict, stopwordDict, stopwordTweetCount"
+    "            print(e)\n",
+    "    return wordDict, stopwordDict, stopwordTweetCount, round(tweet_length/length,1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialize Users"
    ]
   },
   {
@@ -71,50 +83,11 @@
    "outputs": [],
    "source": [
     "patients = dict()\n",
-    "ordinarys = dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "ordinarys = dict()\n",
     "with open('../0_dataset/patient_ids') as r:\n",
     "    for patient in r.readlines()[:100]:\n",
     "        patient = patient.strip()\n",
-    "        patients[patient] = peopleInfo.Patient(patient)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Remove users:['181095972', '2409775369', '363595479', '2382824556', '113666708', '2195175613', '402683346', '3031516391', '1229103648']\n"
-     ]
-    }
-   ],
-   "source": [
-    "patients = filterMethods.by_tweets_number(patients)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "        patients[patient] = peopleInfo.Patient(patient)\n",
     "with open('../0_dataset/ordinary_ids') as r:\n",
     "    for ordinary in r.readlines()[:100]:\n",
     "        ordinary = ordinary.strip()\n",
@@ -122,159 +95,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filter Users"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Remove users:['3031516391', '2994889032']\n",
       "Remove users:[]\n"
      ]
     }
    ],
    "source": [
-    "ordinarys = filterMethods.by_tweets_number(ordinarys)"
+    "patients = filterMethods.filter_user_by_tweet_number(patients)\n",
+    "ordinarys = filterMethods.filter_user_by_tweet_number(ordinarys)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import plotly\n",
-    "# import plotly.offline as offline\n",
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "# from IPython.display import display\n",
-    "plotly.tools.set_credentials_file(username='Adeline', api_key='Z5eltNtBQXqvI05ZFQtz')\n",
-    "# offline.init_notebook_mode(connected=True)"
+    "# Compare Stopwords between Ordinary People and Patients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "total3 = [0, 0, 0]\n",
-    "for key in patients:\n",
-    "    _w, _s, _sc = getWordsDict(patients[key].getText())\n",
-    "    total3[0] += sum(_s.values())\n",
-    "    total3[1] += _sc\n",
-    "    total3[2] += len(patients[key].inRangeDf)\n",
-    "    \n",
-    "# 0:Stopwords總數/ 1:含有stopwords的推文總數/ 2:（時間內的）推文總數"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "total4 = [0, 0, 0]\n",
-    "for key in ordinarys:\n",
-    "    _w, _s, _sc = getWordsDict(ordinarys[key].getText())\n",
-    "    total4[0] += sum(_s.values())\n",
-    "    total4[1] += _sc\n",
-    "    total4[2] += len(ordinarys[key].inRangeDf)\n",
-    "\n",
-    "# 0:Stopwords總數/ 1:含有stopwords的推文總數/ 2:（時間內的）推文總數"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "trace_patients = go.Bar(x=['Type1', 'Type2'],\n",
-    "                  y=[round(total3[0]/total3[1],1), round(total3[1]/total3[2],1)],\n",
-    "                  name='Patients',\n",
-    "                  marker=dict(color='#ffcdd2'))\n",
+    "patients_total = [0, 0, 0, 0]\n",
+    "for key in patients:\n",
+    "    _w, _s, _sc, _tl = getWordsDict(patients[key].getText())\n",
+    "    patients_total[0] += sum(_s.values())\n",
+    "    patients_total[1] += _sc\n",
+    "    patients_total[2] += len(patients[key].inRangeDf)\n",
+    "    patients_total[3] += _tl\n",
+    "    \n",
+    "patients_total[3] = round(patients_total[3]/len(patients),1)\n",
     "\n",
-    "trace_ordinarys = go.Bar(x=['Type1', 'Type2'],\n",
-    "                y=[round(total4[0]/total4[1],1), round(total4[1]/total4[2],1)],\n",
-    "                name='Ordinarys',\n",
-    "                marker=dict(color='#A2D5F2'))\n",
-    "data = [trace_patients, trace_ordinarys]\n",
-    "\n",
-    "layout = go.Layout(title='比較',\n",
-    "                xaxis=dict(title='使用者類型'),\n",
-    "                yaxis=dict(title='平均數量'))\n",
-    "\n",
-    "fig3 = go.Figure(data=data, layout=layout)\n",
-    "py.image.save_as(fig3, filename='img/a-simple-plot.png')"
+    "# 0:Stopwords總數/ 1:含有stopwords的發文總數/ 2:（時間內的）發文總數/ 3:平均發文長度"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {},
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ordinarys_total = [0, 0, 0, 0]\n",
+    "for key in ordinarys:\n",
+    "    _w, _s, _sc, _tl = getWordsDict(ordinarys[key].getText())\n",
+    "    ordinarys_total[0] += sum(_s.values())\n",
+    "    ordinarys_total[1] += _sc\n",
+    "    ordinarys_total[2] += len(ordinarys[key].inRangeDf)\n",
+    "    ordinarys_total[3] += _tl\n",
+    "    \n",
+    "ordinarys_total[3] = round(ordinarys_total[3]/len(ordinarys),1)\n",
+    "# 0:Stopwords總數/ 1:含有stopwords的推文總數/ 2:（時間內的）推文總數/ 3:平均發文長度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the format of your plot grid:\n",
+      "[ (1,1) x1,y1 ]  [ (1,2) x2,y2 ]\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Adeline/184.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Adeline/194.embed\" height=\"600px\" width=\"900px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "py.iplot(fig3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filter_tweet(txt):\n",
-    "    \n",
-    "    try:\n",
-    "        # url\n",
-    "        txt = re.sub(r\"http\\S+\", \"\", txt)\n",
-    "        txt = re.sub(r\"https\\S+\", \"\", txt)\n",
-    "        txt = re.sub(r\"twitter.com/\\S+\", \"\", txt)\n",
-    "        txt = re.sub(r\"pic.twitter.com\\S+\", \"\", txt)\n",
-    "        txt = re.sub(r\"\\S+/\\S+\",\"\", txt)\n",
-    "        #txt = re.sub(r\"\\S+\\/status\\S+\", txt)\n",
-    "        # mention\n",
-    "        txt = re.sub(r\"@\\S+\", \"\", txt)\n",
-    "    except TypeError as e:\n",
-    "        print(e)\n",
-    "    \n",
-    "    return txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "trace1_p = go.Bar(x=['stopwords佔每篇發文的數量', '有stopwords的發文佔總發文數量'],\n",
+    "                  y=[round(patients_total[0]/patients_total[1],1), round(patients_total[1]/patients_total[2],1)],\n",
+    "                  name='Patients',\n",
+    "                  marker=dict(color='#ffcdd2'))\n",
+    "\n",
+    "trace1_o = go.Bar(x=['stopwords佔每篇發文的數量', '有stopwords的發文佔總發文數量'],\n",
+    "                y=[round(ordinarys_total[0]/ordinarys_total[1],1), round(ordinarys_total[1]/ordinarys_total[2],1)],\n",
+    "                name='Ordinarys',\n",
+    "                marker=dict(color='#A2D5F2'))\n",
+    "\n",
+    "trace2_p = go.Bar(x=['發文長度'],\n",
+    "                y=[patients_total[3]],\n",
+    "                marker=dict(color='#ffcdd2'))\n",
+    "\n",
+    "trace2_o = go.Bar(x=['發文長度'],\n",
+    "                y=[ordinarys_total[3]],\n",
+    "                marker=dict(color='#A2D5F2'))\n",
+    "\n",
+    "fig = plotly.tools.make_subplots(rows=1, cols=2)\n",
+    "fig.append_trace(trace1_p,1,1)\n",
+    "fig.append_trace(trace1_o,1,1)\n",
+    "fig.append_trace(trace2_p,1,2)\n",
+    "fig.append_trace(trace2_o,1,2)\n",
+    "fig['layout'].update(height=600, width=900, title='Stopwords 比較')\n",
+    "# fig3 = go.Figure(data=data, layout=layout)\n",
+    "py.image.save_as(fig, filename='img/stopwords_compare.png')\n",
+    "# display(Image(filename='img/stopwords_compare.png'))\n",
+    "py.iplot(fig)"
    ]
   },
   {
