train tfidf with multi-grams

--- a/1_preprocessing/FilterMethods.ipynb
+++ b/1_preprocessing/FilterMethods.ipynb
@@ -36,13 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_tweet_by_re(txt, how='empty'):\n",
     "    ''' 過濾推文中的網址、被提及的人名 '''\n",
-    "\n",
+    "    replace_link = None\n",
+    "    replace_mention = None\n",
+    "    \n",
     "    if how == 'empty':\n",
     "        replace_link = ''\n",
     "        replace_mention = ''\n",
@@ -51,7 +53,7 @@
     "        replace_mention = 'MENTION'\n",
     "    else:\n",
     "        print('Error HOW')\n",
-    "        pass\n",
+    "        \n",
     "    try:\n",
     "        # url\n",
     "        txt = re.sub(r\"http\\S+\", replace_link, txt)\n",
