--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.cross_validation import StratifiedShuffleSplit\n",
+    "from random import randint\n",
     "import ipynb.fs.defs.PeopleInfo as peopleInfo\n",
     "from nltk.corpus import stopwords\n",
     "from nltk import TweetTokenizer\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remove users:['3031516391', '2994889032']\n",
+      "Remove users:['3181152355']\n",
       "Remove users:[]\n"
      ]
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -227,8 +227,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prepare Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -236,75 +243,108 @@
    "source": [
     "base_texts = []\n",
     "group_texts = []\n",
-    "\n",
-    "for key in ordinarys.keys():\n",
-    "    base_texts.append(filter_tweet('\\n'.join(ordinarys[key].getText())))\n",
+    "base_texts_symbol = []\n",
+    "group_texts_symbol = []\n",
     "\n",
     "for key in patients.keys():\n",
-    "    group_texts.append(filter_tweet('\\n'.join(patients[key].getText())))\n",
+    "    group_texts.append(filterMethods.filter_tweet_by_re('\\n'.join(patients[key].getText())))\n",
+    "    group_texts_symbol.append(filterMethods.filter_tweet_by_re('\\n'.join(patients[key].getText()),how='symbol'))\n",
     "\n",
-    "corpus = base_texts + group_texts"
+    "for key in ordinarys.keys():\n",
+    "    base_texts.append(filterMethods.filter_tweet_by_re('\\n'.join(ordinarys[key].getText())))\n",
+    "    base_texts_symbol.append(filterMethods.filter_tweet_by_re('\\n'.join(ordinarys[key].getText()),how='symbol'))\n",
+    "\n",
+    "corpus = base_texts + group_texts\n",
+    "corpus_symbol = base_texts_symbol + group_texts_symbol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TF-IDF Model with Multi-grams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getTFIDF(base_texts, group_texts, grams, stop_words=True):\n",
+    "    print(grams)\n",
+    "    \n",
+    "    low = grams[0]\n",
+    "    high = grams[1]\n",
+    "\n",
+    "    vectorizer = TfidfVectorizer(stop_words=\"english\",ngram_range = (low,high), min_df=1)\n",
+    "    X = vectorizer.fit_transform(base_texts+group_texts)\n",
+    "    Y = np.array([0] * len(base_texts) + [1]*len(group_texts), dtype=int)\n",
+    "    return X, Y, vectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "def getTopFeatures(vectorizer, classifier, k=50):\n",
+    "    vector2word = vectorizer.get_feature_names()\n",
+    "    feature_indicies = np.argsort(classifier.feature_importances_)\n",
+    "    top_words = []\n",
+    "    for i in range(50):\n",
+    "        vector = feature_indicies[-i-1]\n",
+    "        word = vector2word[vector]\n",
+    "        top_words.append(word)\n",
+    "    return top_words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train RandomForest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='sqrt', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=128, n_jobs=-1,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
-      ]
-     },
-     "execution_count": 254,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1]\n",
+      "[1, 2]\n",
+      "[2, 2]\n"
+     ]
     }
    ],
    "source": [
-    "vectorizer = TfidfVectorizer(stop_words=\"english\",ngram_range = (1,2), min_df=1)\n",
-    "X = vectorizer.fit_transform(corpus)\n",
-    "idf = vectorizer.idf_\n",
-    "Y = np.array([0] * len(base_texts) + [1]*len(group_texts), dtype=int)\n",
-    "classifier  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
-    "classifier.fit(X,Y)"
+    "grams = [[1,1],[1,2],[2,2]]\n",
+    "top_words_grams = []\n",
+    "for i in range(len(grams)):\n",
+    "    X, Y, vectorizer = getTFIDF(base_texts, group_texts, grams=grams[i])\n",
+    "    classifier  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "    classifier.fit(X,Y)\n",
+    "    top_words = getTopFeatures(vectorizer,classifier)\n",
+    "    top_words_grams.append(top_words)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 255,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "feature_indicies = np.argsort(classifier.feature_importances_)\n",
-    "vector2word = vectorizer.get_feature_names()"
+    "# Top 50: Unigram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top_words = []\n",
-    "for i in range(50):\n",
-    "    vector = feature_indicies[-i-1]\n",
-    "    word = vector2word[vector]\n",
-    "    top_words.append(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -314,94 +354,219 @@
       "text/plain": [
        "['diagnosed',\n",
        " 'pic',\n",
-       " 'people',\n",
        " 'depression',\n",
-       " 'scared',\n",
-       " 'fact',\n",
-       " 'right',\n",
-       " 'feeling',\n",
-       " 'love',\n",
-       " 'pic love',\n",
-       " 'throw',\n",
-       " 'came',\n",
-       " 'ass',\n",
-       " 'fucked',\n",
-       " 'problems',\n",
+       " 'deserve',\n",
+       " 'literally',\n",
+       " 'bitch',\n",
+       " 'trying',\n",
+       " 'dead',\n",
+       " 'hard',\n",
+       " 'laughing',\n",
+       " 'trump',\n",
+       " 'pain',\n",
+       " 'crying',\n",
+       " 'anxiety',\n",
+       " 'fucking',\n",
+       " 'depressed',\n",
+       " 'starting',\n",
+       " 'friends',\n",
+       " 'number',\n",
+       " 'used',\n",
+       " 'today',\n",
+       " 'young',\n",
+       " 'look',\n",
        " 'confused',\n",
-       " 'stay',\n",
-       " 'pure',\n",
-       " 'make sure',\n",
-       " 'energy',\n",
-       " 'tho',\n",
-       " 'shit',\n",
-       " 'stop',\n",
-       " 'door',\n",
-       " 'hot',\n",
-       " 'sorry',\n",
-       " 'shitty',\n",
-       " 'ice',\n",
-       " 'lost',\n",
-       " 'thank',\n",
-       " 'watched',\n",
-       " 'honestly',\n",
-       " 'took',\n",
-       " 'll',\n",
-       " 'like just',\n",
-       " '13',\n",
-       " 'words',\n",
+       " 'blocked',\n",
+       " 'wouldn',\n",
+       " 'longer',\n",
+       " 'tweet',\n",
+       " 'person',\n",
+       " 'amp',\n",
+       " 'deserves',\n",
+       " 'came',\n",
        " 'told',\n",
-       " 'protect',\n",
-       " 'boobs',\n",
-       " 'dude',\n",
-       " 'real',\n",
-       " 'currently',\n",
-       " 'mental',\n",
-       " 'wtf',\n",
-       " 'surprised',\n",
-       " 'laugh',\n",
-       " 'hours',\n",
-       " 'wasn',\n",
-       " 'bit']"
+       " 'asking',\n",
+       " 'happened',\n",
+       " 'loved',\n",
+       " 'problem',\n",
+       " 'opened',\n",
+       " 'god',\n",
+       " 'wanna',\n",
+       " 'thinking',\n",
+       " 'ass',\n",
+       " 'things',\n",
+       " 'idk',\n",
+       " 'life',\n",
+       " 'sorry',\n",
+       " 'head',\n",
+       " 'holy',\n",
+       " 'letting',\n",
+       " 'bed']"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_words"
+    "top_words_grams[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Top 50: Unigram and Bigrams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
+   "execution_count": 65,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/dist-packages/sklearn/cross_validation.py:41: DeprecationWarning:\n",
-      "\n",
-      "This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['depression',\n",
+       " 'wtf',\n",
+       " 'sorry',\n",
+       " 've seen',\n",
+       " 'diagnosed depression',\n",
+       " 'girl',\n",
+       " 'thanks',\n",
+       " 'let',\n",
+       " 'diagnosed',\n",
+       " 'holy shit',\n",
+       " 'don',\n",
+       " 'life',\n",
+       " 'different',\n",
+       " 'anymore',\n",
+       " 'stop',\n",
+       " 'appreciate',\n",
+       " 'problem',\n",
+       " 'hit',\n",
+       " 'help',\n",
+       " 'idea',\n",
+       " 'good',\n",
+       " 'pain',\n",
+       " 'ones',\n",
+       " 'giving',\n",
+       " 'fully',\n",
+       " 'hours',\n",
+       " 'account',\n",
+       " 'pic don',\n",
+       " 'eyes',\n",
+       " 'explain',\n",
+       " 'positive',\n",
+       " 'terrible',\n",
+       " 'joke',\n",
+       " 'today',\n",
+       " 'll',\n",
+       " 'wanna talk',\n",
+       " 'kept',\n",
+       " 'idk',\n",
+       " 'felt',\n",
+       " 'dead',\n",
+       " 'straight',\n",
+       " 'happening',\n",
+       " 'don think',\n",
+       " '10',\n",
+       " 'certain',\n",
+       " 'especially',\n",
+       " 'com',\n",
+       " 'stone',\n",
+       " 'big',\n",
+       " 'ex']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.cross_validation import StratifiedShuffleSplit"
+    "top_words_grams[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Top 50: Bigrams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 66,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['diagnosed depression',\n",
+       " 'pic thank',\n",
+       " 'feel like',\n",
+       " 'pic pic',\n",
+       " 'depression anxiety',\n",
+       " 'pic happy',\n",
+       " 'holy shit',\n",
+       " 'oh god',\n",
+       " 'look like',\n",
+       " 'pic don',\n",
+       " 'newprofilepic pic',\n",
+       " 'make sure',\n",
+       " 'pic just',\n",
+       " 'pic yes',\n",
+       " 'pic really',\n",
+       " 'know right',\n",
+       " 'fall love',\n",
+       " 'good idea',\n",
+       " 'time pic',\n",
+       " 'pic wanna',\n",
+       " 'yes pic',\n",
+       " 'gets better',\n",
+       " 'things ve',\n",
+       " 'pic time',\n",
+       " 'fuck did',\n",
+       " 've diagnosed',\n",
+       " 'wanna talk',\n",
+       " 'like really',\n",
+       " 'fuck pic',\n",
+       " 'pic need',\n",
+       " 'today pic',\n",
+       " 'don like',\n",
+       " 'just realized',\n",
+       " 'pic hey',\n",
+       " 'pic looks',\n",
+       " 'pic know',\n",
+       " 'pic fuck',\n",
+       " 'just don',\n",
+       " 'pic literally',\n",
+       " 'like don',\n",
+       " 'pic beautiful',\n",
+       " 'pic honestly',\n",
+       " 'years ago',\n",
+       " 'fidget spinner',\n",
+       " 'doing thing',\n",
+       " 'fall asleep',\n",
+       " 'pic yeah',\n",
+       " 'day just',\n",
+       " 'doesn want',\n",
+       " 'didn want']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from random import randint"
+    "top_words_grams[2]"
    ]
   },
   {
