--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -267,20 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getTFIDF(base_texts, group_texts, grams, stop_words=True):\n",
-    "    print(grams)\n",
-    "    \n",
+    "    print('Get Tf-idf with grams:{0}'.format(grams))\n",
     "    low = grams[0]\n",
     "    high = grams[1]\n",
-    "\n",
+    "    text_model = dict()\n",
     "    vectorizer = TfidfVectorizer(stop_words=\"english\",ngram_range = (low,high), min_df=1)\n",
     "    X = vectorizer.fit_transform(base_texts+group_texts)\n",
     "    Y = np.array([0] * len(base_texts) + [1]*len(group_texts), dtype=int)\n",
-    "    return X, Y, vectorizer"
+    "    text_model['X'] = X\n",
+    "    text_model['Y'] = Y\n",
+    "    text_model['vectorizer'] = vectorizer\n",
+    "    return text_model"
    ]
   },
   {
@@ -311,16 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1]\n",
-      "[1, 2]\n",
-      "[2, 2]\n"
+      "Get Tf-idf with grams:[1, 1]\n",
+      "Get Tf-idf with grams:[1, 2]\n",
+      "Get Tf-idf with grams:[2, 2]\n"
      ]
     }
    ],
@@ -328,10 +332,10 @@
     "grams = [[1,1],[1,2],[2,2]]\n",
     "top_words_grams = []\n",
     "for i in range(len(grams)):\n",
-    "    X, Y, vectorizer = getTFIDF(base_texts, group_texts, grams=grams[i])\n",
+    "    text_model = getTFIDF(base_texts, group_texts, grams=grams[i])\n",
     "    classifier  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
-    "    classifier.fit(X,Y)\n",
-    "    top_words = getTopFeatures(vectorizer,classifier)\n",
+    "    classifier.fit(text_model['X'],text_model['Y'])\n",
+    "    top_words = getTopFeatures(text_model['vectorizer'],classifier)\n",
     "    top_words_grams.append(top_words)"
    ]
   },
@@ -570,237 +574,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get Precision"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sss = StratifiedShuffleSplit(Y, 10, random_state=randint(0,65536))"
+    "def getPrecision(base_texts, group_texts, text_model, clf = \"default\", n_fold=10):\n",
+    "    X = text_model['X']\n",
+    "    Y = text_model['Y']\n",
+    "    sss = StratifiedShuffleSplit(Y, 10, random_state=randint(0,65536))\n",
+    "    if clf == 'default':\n",
+    "        classifier = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "        \n",
+    "    precisions = []\n",
+    "    for train_index, test_index in sss:\n",
+    "        X_train, X_test = X[train_index], X[test_index]\n",
+    "        Y_train, Y_test = Y[train_index], Y[test_index]\n",
+    "        classifier = classifier.fit(X_train, Y_train)\n",
+    "        score = classifier.score(X_test, Y_test)\n",
+    "        precisions.append(score)\n",
+    "    return precisions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 1 0 1 1 0 0 1 0 0 1 1 1 0 0 1 1 0 0 1 1 1 0 1 1 0 1 1 1 1 0 0 1 0 1 0\n",
-      " 0 0 0 0 1 1 1 0 0 0 1 1 1 0 1 1 0 1 1 1 1 1 1 0 1 0 0 1 0 0 1 1 0 1 0 1 1\n",
-      " 0 0 1 0 0 0 1 0 0 0 0 1 0 1 1 1 1 0 0 0 0 1 1 0 1 1 0 1 1 0 0 0 1 1 1 1 0\n",
-      " 0 0 0 1 0 0 1 0 1 1 0 1 0 0 1 1 1 0 0 0 0 1 1 0 0 0 1 0 1 1 0 0 0 0 1 1 0\n",
-      " 0 1 0 1 1 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "precisions = []\n",
-    "for train_index, test_index in sss:\n",
-    "    \n",
-    "    X_train, X_test = X[train_index], X[test_index]\n",
-    "    Y_train, Y_test = Y[train_index], Y[test_index]\n",
-    "    classifier = classifier.fit(X_train, Y_train)\n",
-    "    score = classifier.score(X_test, Y_test)\n",
-    "    precisions.append(score)"
+    "precisions = getPrecision(base_texts,group_texts,text_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.67000000000000004"
+       "0.73157894736842111"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.mean(precisions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.tree import export_graphviz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='sqrt', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=128, n_jobs=-1,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
-      ]
-     },
-     "execution_count": 263,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vectorizer2 = TfidfVectorizer(stop_words=\"english\",ngram_range = (1,2), min_df=1)\n",
-    "X2 = vectorizer2.fit_transform(group_texts+group_texts)\n",
-    "idf2 = vectorizer2.idf_\n",
-    "Y2 = np.array([0] * len(group_texts) + [1]*len(group_texts), dtype=int)\n",
-    "classifier2  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
-    "classifier2.fit(X2,Y2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 264,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "feature_indicies2 = np.argsort(classifier2.feature_importances_)\n",
-    "vector2word2 = vectorizer2.get_feature_names()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "top_words2 = []\n",
-    "for i in range(50):\n",
-    "    vector2 = feature_indicies2[-i-1]\n",
-    "    word2 = vector2word2[vector2]\n",
-    "    top_words2.append(word2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 266,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['caught',\n",
-       " 'second',\n",
-       " 'feel bad',\n",
-       " 'af',\n",
-       " 'does',\n",
-       " 'thanks',\n",
-       " 'feel',\n",
-       " 'really good',\n",
-       " 'friends',\n",
-       " 'miss',\n",
-       " 'lied',\n",
-       " 'send',\n",
-       " 'new',\n",
-       " 'precious',\n",
-       " 'feels',\n",
-       " 'fellow',\n",
-       " 'year old',\n",
-       " 'truth',\n",
-       " 'born',\n",
-       " 'walk away',\n",
-       " 'hi',\n",
-       " 'sure',\n",
-       " 'stop',\n",
-       " 'song',\n",
-       " 'wonderful',\n",
-       " 'boo',\n",
-       " 'pants',\n",
-       " 'lover',\n",
-       " 'strike',\n",
-       " 'candidate',\n",
-       " 'right',\n",
-       " 'held',\n",
-       " 'sauce',\n",
-       " 'france',\n",
-       " 'gonna',\n",
-       " 'weight',\n",
-       " 'graduation',\n",
-       " 'depression',\n",
-       " 'away',\n",
-       " 'relate',\n",
-       " 'long',\n",
-       " 'love ve',\n",
-       " 'life got',\n",
-       " 'distract',\n",
-       " 'pic',\n",
-       " '30am',\n",
-       " 'cooking',\n",
-       " 'thought thing',\n",
-       " 'register',\n",
-       " 'need']"
-      ]
-     },
-     "execution_count": 266,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_words2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 270,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sss = StratifiedShuffleSplit(Y2, 1, random_state=randint(0,65536))\n",
-    "precisions2 = []\n",
-    "for train_index, test_index in sss:\n",
-    "    \n",
-    "    X_train, X_test = X2[train_index], X2[test_index]\n",
-    "    Y_train, Y_test = Y2[train_index], Y2[test_index]\n",
-    "    classifier = classifier2.fit(X_train, Y_train)\n",
-    "    score = classifier2.score(X_test, Y_test)\n",
-    "    precisions2.append(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 271,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.052631578947368418"
-      ]
-     },
-     "execution_count": 271,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(precisions2)"
    ]
   },
   {
